# DesignPatterns

./: CMakeLists.txt  DesignPrinciples.md  README.md
Strategy/: CMakeLists.txt  DecoyDuck.hpp  Duck.hpp  FlyBehavior.hpp  FlyNoWay.hpp  FlyWithWings.hpp  MallardDuck.hpp  MuteQuack.hpp  Quack.hpp  QuackBehavior.hpp  README.md  RubberDuck.hpp  Squeak.hpp  main.cpp
